# openevent-view

./: .gitmodules  LICENSE  Makefile  README.md  README_cn.md  build.sh  pyproject.toml  test.sh
src/openevent/view/: __init__.py  cli.py  config.py  history.py  server.py
src/openevent/view/static/: __init__.py  app.css  app.js  index.html
tests/: test_config.py  test_history.py  test_server.py
